# Streams-ble-gateway

./: .gitignore  Cargo.toml  README.md  config.json
src/: lib.rs  main.rs
src/ble_connectivity/: ble_client.rs  handlers.rs  mod.rs
src/types/: ble_config.rs  config.rs  mod.rs
