[package]
name = "ble-gateway"
version = "0.1.0"
authors = ["AleBuser <4l3bu53r@gmail.com>"]
edition = "2018"

[[bin]]
name="scan"
path="bin/scan.rs"

[lib]
name = "local"
path = "src/lib.rs"

[dependencies]
gateway_core = { git = "https://github.com/iot2tangle/streams-gateway-core", branch="master"}
serde = {version="1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.53"
blurz = "0.4.0"
